--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,19 @@
+h1 {
+  text-align: center;
+}
+
 .square {
-  border: 2px solid black;
-  height: 100px;
-  width: 100px;
+  height: 200px;
+  width: 200px;
+  border: 1px solid black;
+  text-align: center;
+  font-size: 10rem;
+}
+
+.grid {
+  display: flex;
+  flex-wrap: wrap;
+  width: 610px;
+  height: 610px;
+  margin: 0 auto;
 }
